--- a/MvcMusicStore/MvcMusicStore/Views/Store/Browse.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/Store/Browse.cshtml
@@ -9,7 +9,9 @@
     @foreach (var album in Model.Albums)
     {
         <li>
-            @Html.ActionLink(album.Title, "Details", new { id = album.AlbumId})
+            @Html.ActionLink(album.Title,
+"Details", new { id = album.AlbumId })
         </li>
     }
 </ul>
+
