--- a/MvcMusicStore/MvcMusicStore/Views/Store/Index.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/Store/Index.cshtml
@@ -2,14 +2,17 @@
 @{
     ViewBag.Title = "Store";
 }
+
 <h3>Browse Genres</h3>
 <p>
-    Select from @Model.Count()
-    genres:
+    Select from @Model.Count() genres:
 </p>
 <ul>
     @foreach (var genre in Model)
     {
-        <li>@Html.ActionLink(genre.Name, "Browse", new { genre = genre.Name})</li>
+        <li>
+            @Html.ActionLink(genre.Name,
+            "Browse", new { genre = genre.Name })
+    </li>
     }
 </ul>
